# quantfolio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
quantfolio/: asset.py  backend.py  portfolio.py  web.py
tests/: test_asset.py  test_portfolio.py
