[tool.poetry]
name = "quantfolio"
version = "0.1.0"
description = "Portfolio analysis tool for personal use"
authors = ["Nate New <nathanhnew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"
pandas = "^2.2.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"
autopep8 = "^2.3.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.autopep8]
max_line_length = 120
ignore = ["E501", "E203", "E701"]
extend_select = "B950"

[tool.black]
line-length = 120
